<resources>
  <string name="app_name">Apartment Search</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="loading_database">Loading database...</string>
  <string name="per_night">per night</string>
  <string name="filter">Filter</string>
  <string name="filters">Filters</string>
  <string name="check_in">Check In</string>
  <string name="apply">Apply</string>
  <string name="adults">Adults</string>
  <string name="children">Children</string>
  <string name="ages_2_12">Ages 2 - 12</string>
  <string name="infants">Infants</string>
  <string name="under_2">Under 2</string>
  <string name="total_guests">Total guests</string>
  <string name="reset">Reset</string>
  <string name="search_by_hotel_name">Search by Hotel Name</string>
  <string name="sort_type">Sort type</string>
  <string name="price_range">Price Range:</string>
  <string name="sort_results">Sort results</string>
  <string name="clear">Clear</string>
  <string name="home_type">Home type</string>
  <string name="apply_filters">Apply Filters</string>
  <string name="amenities">Amenities</string>
  <string name="nearby_landmarks">Nearby landmarks</string>
  <string name="location">Location</string>
  <string name="house_rules">House Rules</string>
  <string name="house_rule">No pets \nNo smoking, parties, or events \nCheck-in is anytime after 3PM and check out by 11AM</string>
  <string name="cancellation"><b>Strict</b> \nThis reservation is non-refundable because check-in is less than 7 days away.
  </string>
  <string name="book_now">Book Now</string>

  <string-array name="custom_weekdays">
    <item>Su</item>
    <item>Mo</item>
    <item>Tu</item>
    <item>We</item>
    <item>Th</item>
    <item>Fr</item>
    <item>Sa</item>
  </string-array>

  <string-array name="custom_months">
    <item>Jan</item>
    <item>Feb</item>
    <item>March</item>
    <item>April</item>
    <item>May</item>
    <item>June</item>
    <item>July</item>
    <item>Aug</item>
    <item>Sep</item>
    <item>Oct</item>
    <item>Nov</item>
    <item>Dec</item>
  </string-array>
</resources>